Simplify/fix makefiles
Build is unreliable in Windows.
`liblwip2.a` is updated three times during the build (for glue, glue-esp and src builds)
and will sometimes fail to perform one of them.

This solution builds a separate library for each of the three components, then merges them.

--- a/Makefile.sming
+++ b/Makefile.sming
@@ -8,7 +8,7 @@ LWIP_INCLUDES_RELEASE=include
 all: install
 
 %:
-	@make -f makefiles/Makefile.build-lwip2 \
+	@$(MAKE) -f makefiles/Makefile.build-lwip2 \
 			LWIP_LIB=liblwip2.a \
 			LWIP_LIB_RELEASE=$(LWIP_LIB_RELEASE) \
 			LWIP_INCLUDES_RELEASE=$(LWIP_INCLUDES_RELEASE) \
