--- a/makefiles/Makefile.glue-esp
+++ b/makefiles/Makefile.glue-esp
@@ -6,7 +6,7 @@ ifeq ($(LWIP_ESP),)
 $(error LWIP_ESP must point to espressif sdk lwip/include)
 endif
 
-BUILD_INCLUDES = -I$(BUILD) -I$(SDK)/include -I$(LWIP_ESP) -Iglue
+BUILD_INCLUDES = -I$(BUILD) $(CFLAGS_EXTRA) -I$(LWIP_ESP) -Iglue
 BUILD_FLAGS += -DLWIP14GLUE
 
 include makefiles/Makefile.defs
